--- a/src/main/resources/templates/edge-add.html
+++ b/src/main/resources/templates/edge-add.html
@@ -15,9 +15,6 @@
         .row-mine {
             max-width: 83%;
         }
-        .form-control::placeholder {
-            color: red;
-        }
     </style>
 </head>
 <body>
@@ -118,11 +115,11 @@
                     <div class="card border-light px-5 py-1" style="max-height: 85vh">
                         <div class="shadow p-3 rounded border-bottom border-4 border-primary-subtle">
                             <div class="row">
-                                <span class="noto-sans-700 fs-3">간선 추가</span>
-                            </div>
-                            <div class="row">
-                                <div class="col-3 offset-9 text-end">
-                                    <span style="color:red;">*</span> 필수입력
+                                <div class="col">
+                                    <span class="noto-sans-700 fs-3">간선 추가</span>
+                                </div>
+                                <div class="col text-end">
+                                    <button type="button" class="btn btn-outline-primary">추가</button>
                                 </div>
                             </div>
                             <div class="row">
@@ -130,8 +127,7 @@
                                     <div class="row mt-4">
                                         <div class="input-group mb-3">
                                             <span class="input-group-text">&nbsp;이름&nbsp;</span>
-                                            <input type="text" class="form-control" placeholder="
-                                                *">
+                                            <input type="text" class="form-control">
                                         </div>
                                     </div>
                                     <div class="row mt-4">
@@ -158,11 +154,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row mt-5 pt-5 ps-1">
-                                        <div class="col-3">
-                                            <a class="btn btn-primary" href="#" role="button">노드 추가</a>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -173,12 +164,4 @@
     </div>
 </div>
 </body>
-<script>
-    var mapOptions = {
-        center: new naver.maps.LatLng(37.3595704, 127.105399),
-        zoom: 10
-    };
-
-    var map = new naver.maps.Map('map', mapOptions);
-</script>
 </html>
