--- a/src/main/resources/templates/user-manage.html
+++ b/src/main/resources/templates/user-manage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>승인 대기자 목록</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,70 +93,70 @@
             <div class="bg-white p-2">
                 <p class="d-flex mt-2 align-items-center">
                     <span class="d-none d-sm-inline">
-                        <img src="Assets/Gach가자_홈페이지용.png" class="img-fluid">
+                        <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
                     </span>
                 </p>
                 <ul class="nav flex-column mt-4">
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
+                            <img src="/image/squares.leading.rectangle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">대시보드</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/arrow.triangle.branch.png" class="img-fluid mb-2">
+                            <img src="/image/arrow.triangle.branch.png" class="img-fluid mb-2">
                             <span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">경로 관리</span>
-                            <img src="Assets/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
+                            <img src="/image/chevron.down.png" class="img-fluid mb-2 ms-3" onclick="viewDetail()">
                         </a>
                         <ul id="additionalOptions" class="additional-options nav nav-pills flex-column">
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/dot.viewfinder.png" class="img-fluid mb-1">
+                                <img src="/image/dot.viewfinder.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">노드 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
+                                <img src="/image/rectangle.connected.to.line.below.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none;">간선 관리</a>
                             </li>
                             <li class="nav-item mt-1 nav-link">
-                                <img src="Assets/map.png" class="img-fluid mb-1">
+                                <img src="/image/map.png" class="img-fluid mb-1">
                                 <a href="#" class="mt-2 text-body-secondary fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar" style="display:inline; text-decoration: none">경로 테스트</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/brain.head.profile.png" class="img-fluid mb-2 me-4">
+                            <img src="/image/brain.head.profile.png" class="img-fluid mb-2 me-4">
                             <span class="fs-5 d-none d-sm-inline noto-sans-sidebar">AI 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
+                            <img src="/image/building.2.png" class="img-fluid mb-2 me-1"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">장소 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
+                            <img src="/image/calendar.badge.plus.png" class="img-fluid mb-2"><span class="fs-5 ms-3 d-none d-sm-inline noto-sans-sidebar">행사 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="Assets/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
+                            <img src="/image/person.3.sequence.png" class="img-fluid mb-2 pe-1"><span class="fs-5 ms-2 d-none d-sm-inline noto-sans-sidebar">사용자 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
+                            <img src="/image/person.fill.questionmark.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">문의 관리</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
-                            <img src="Assets/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
+                            <img src="/image/exclamationmark.circle.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">로그</span>
                         </a>
                     </li>
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary ps-2">
-                            <img src="Assets/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
+                            <img src="/image/person.badge.key.png" class="img-fluid mb-2"><span class="fs-5 ms-4 d-none d-sm-inline noto-sans-sidebar">관리자 설정</span>
                         </a>
                     </li>
                 </ul>
@@ -170,7 +170,7 @@
 
                 <div class="row">
                     <div class="col align-items-start ubuntu-medium fs-3">
-                        관리자 설정
+                        사용자 관리
                     </div>
                     <div class="col align-items-end text-end">
                         <img src="/image/nmj.JPG" class="rounded-circle mb-3 mx-3" style="width:40px">
@@ -183,24 +183,23 @@
                 <div class="row">
                     <div class="col">
                         <div class="card border-light" style="max-height: 85vh">
-                            <div class="shadow p-3 rounded border-bottom border-4 border-warning-subtle">
+                            <div class="shadow p-3 rounded border-bottom border-4 border-info-subtle">
                                 <div class="row ubuntu-medium fs-3 ms-2 justify-content-between">
                                     <div class="col-2">
-                                        승인 대기자 목록
+                                        사용자 목록
                                     </div>
                                 </div>
                                 <hr>
-                                <div class="row ms-2 me-2" style="overflow: scroll; max-height: 70vh">
+                                <div class="row ms-2 me-2" style="overflow: scroll;">
                                     <table class="table" style="overflow: auto; white-space: nowrap; border-collapse: collapse;">
                                         <thead>
                                         <tr>
                                             <th scope="col">번호</th>
                                             <th scope="col">아이디</th>
-                                            <th scope="col">권한</th>
-                                            <th scope="col">이름</th>
-                                            <th scope="col">생년월일</th>
-                                            <th scope="col">승인</th>
-                                            <th scope="col">거절</th>
+                                            <th scope="col">닉네임</th>
+                                            <th scope="col">성별</th>
+                                            <th scope="col">출생년도</th>
+                                            <th scope="col">학과</th>
                                         </tr>
                                         </thead>
                                         <tbody>
@@ -210,8 +209,55 @@
                                             <td th:text="${node.getPointX()}">Otto</td>
                                             <td th:text="${node.getPointY()}">@mdo</td>
                                             <td th:text="${node.getPointY()}">@mdo</td>
-                                            <td th:text="${node.getPointY()}">승인</td>
-                                            <td th:text="${node.getPointY()}">거절</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                        </tr>
+                                        <tr th:each="node : ${nodeList}">
+                                            <th scope="row" th:text="${node.getId()}">1</th>
+                                            <td th:text="${node.getName()}">Mark</td>
+                                            <td th:text="${node.getPointX()}">Otto</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <td th:text="${node.getPointY()}">@mdo</td>
                                         </tr>
                                         </tbody>
                                     </table>
