--- a/src/main/resources/templates/node-manage.html
+++ b/src/main/resources/templates/node-manage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -82,6 +83,8 @@
             font-weight: 500;
             font-style: normal;
         }
+
+
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -95,6 +98,9 @@
                         <img src="/image/Gach_homepage_main.png.png" class="img-fluid">
                     </span>
                 </p>
+
+
+
                 <ul class="nav flex-column mt-4">
                     <li class="nav-item mt-2">
                         <a href="#" class="nav-link text-body-secondary">
@@ -188,10 +194,16 @@
                                         노드 목록
                                     </div>
                                     <div class="col-2 ms-5 ps-5">
-                                        <button type="button" class="btn btn-outline-success btn-sm fs-5">노드 추가</button>
+                                        <a type="submit" class="btn btn-outline-success btn-sm fs-5" href="/admin/node/add">노드 추가</a>
                                     </div>
                                 </div>
                                 <hr>
+                                <div th:if="${message == '노드가 추가되었습니다.' or message == '노드가 수정되었습니다.' or message == '노드가 삭제되었습니다.'}">
+                                    <div class="alert alert-primary alert-dismissible fade show text-center" role="alert">
+                                        <strong><i class="bi bi-exclamation-circle-fill"></i></strong>&nbsp;<span th:text="${message}"></span>
+                                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                    </div>
+                                </div>
                                 <div class="row ms-2 me-2" style="overflow: scroll; max-height: 70vh">
                                     <table class="table" style="overflow: auto; white-space: nowrap; border-collapse: collapse;">
                                         <thead>
@@ -200,14 +212,22 @@
                                             <th scope="col">노드 이름</th>
                                             <th scope="col">경도</th>
                                             <th scope="col">위도</th>
+                                            <th scope="col">고도</th>
+                                            <th scope="col">상세보기</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <tr th:each="node : ${nodeList}">
-                                            <th scope="row" th:text="${node.getId()}">1</th>
-                                            <td th:text="${node.getName()}">Mark</td>
-                                            <td th:text="${node.getPointX()}">Otto</td>
-                                            <td th:text="${node.getPointY()}">@mdo</td>
+                                            <th scope="row" th:text="${node.getNodeId()}">1</th>
+                                            <td th:text="${node.getNodeName()}">Mark</td>
+                                            <td th:text="${node.getNodeLatitude()}">Otto</td>
+                                            <td th:text="${node.getNodeLongitude()}">@mdo</td>
+                                            <td th:text="${node.getNodeAltitude()}"></td>
+                                            <td class="text-center pe-5">
+                                                <a th:href="@{'/admin/node/'+${node.getNodeId()}}" >
+                                                    <i class = "bi bi-info-circle"></i>
+                                                </a>
+                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -221,4 +241,18 @@
     </div>
 </div>
 </body>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var alertCloseBtns = document.querySelectorAll('.btn-close');
+
+        alertCloseBtns.forEach(function (btn) {
+            btn.addEventListener('click', function () {
+                var alert = btn.closest('.alert');
+                if (alert) {
+                    alert.style.display = 'none';
+                }
+            });
+        });
+    });
+</script>
 </html>
