--- a/src/main/resources/templates/log-in.html
+++ b/src/main/resources/templates/log-in.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="row mt-4 mt-3">
                     <div class="col text-start fs-6">
-                        <button type="button" class="btn btn-outline-secondary">메인 페이지</button>
+                        <a href="/admin/main-page" class="btn btn-outline-secondary">메인 페이지</a>
                     </div>
                     <div class="col text-end">
                         <a type="submit" href="/admin/signup" class="btn btn-outline-warning">회원가입</a>
